--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <div class="nav-center-block">
                                     <div class="nav-middle-block">
                                         <ol class="menu-items">
-                                            <li><a href="#home">home</a></li>
+                                            <li><a href="#home">Home</a></li>
                                             <li><a href="#about-me">about me</a></li>
                                             <li><a href="#skills">skills</a></li>
                                             <li><a href="#education">education</a></li>
