--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                                     <div class="nav-middle-block">
                                         <ol class="menu-items">
                                             <li><a href="#home">Home</a></li>
-                                            <li><a href="#about-me">about me</a></li>
-                                            <li><a href="#skills">skills</a></li>
-                                            <li><a href="#education">education</a></li>
-                                            <li><a href="#employment">employment</a></li>
-                                            <li><a href="#portfolio">portfolio</a></li>
-                                            <li><a href="#contact">contact</a></li>
+                                            <li><a href="#about-me">About me</a></li>
+                                            <li><a href="#skills">Skills</a></li>
+                                            <li><a href="#education">Education</a></li>
+                                            <li><a href="#employment">Employment</a></li>
+                                            <li><a href="#portfolio">Portfolio</a></li>
+                                            <li><a href="#contact">Contact</a></li>
                                         </ol>
                                     </div>
                                 </div>
