--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div class="col-md-1 col-sm-12 col-xs-12 slide-title-col">
                                 <div class="center-block">
                                     <div class="middle-block height-100">
-                                        <h4 class="text-gray slide-title"><span class="small-line bg-deep-green"></span>about me</h4>
+                                        <h4 class="text-gray slide-title"><span class="small-line bg-deep-green"></span>About me</h4>
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                             <div class="col-md-6 height-100 sm-height-auto col-sm-12 col-xs-12 no-padding">
                                 <div class="mCustomScrollbar">
                                     <div class="col-sm-12 col-xs-12 bg-dark-gray2 bottom-title-text">
-                                        <h3 class="text-deep-green bottom-text">short history</h3>
+                                        <h3 class="text-deep-green bottom-text">Short history</h3>
                                     </div>
                                     <div class="col-sm-12 col-xs-12 padding-twelve-left md-padding-ten-left sm-padding-ten-lr sm-margin-four-bottom xs-padding-lr-15px">
                                         <div class="data-title text-extra-small text-deep-green margin-five-bottom xs-margin-eight-bottom">Hello</div>
@@ -249,7 +249,7 @@
                                     <div class="col-md-1 col-sm-12 col-xs-12 slide-title-col sm-margin-six-bottom xs-margin-twelve-bottom">
                                         <div class="center-block">
                                             <div class="middle-block height-100">
-                                                <h4 class="text-gray slide-title"><span class="small-line bg-deep-green"></span>skills</h4>
+                                                <h4 class="text-gray slide-title"><span class="small-line bg-deep-green"></span>Skills</h4>
                                             </div>
                                         </div>
                                     </div>
